--- a/Lesson 13/Barquisimeto.html
+++ b/Lesson 13/Barquisimeto.html
@@ -96,7 +96,7 @@
           northwest. In addition, it is located next to a fertile valley, which
           has contributed to agricultural production, the development of
           commerce, service and the manufacturing industry, which are the main
-          economic activities of the urban area<br />
+          economic activities of the urban area<br><br>
           Since 1983 there has been in the Industrial Zone III of Barquisimeto
           the largest wholesale market in Venezuela, known as MERCABAR (Mercado
           Mayorista de Alimentos de Barquisimeto), which has a land of 108
