--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -41,7 +41,7 @@
     <main>
       <div id="five">
         <section id="summary">
-          <h2 id="clima">Weather Summary</h2>
+          <h2 id="clima">Weather Information</h2>
           <p>Currently: <span id="description"></span></p>
           <p>Temperature: <span id="temp"></span>°F</p>
           <p>Humidity: <span id="humidity"></span>%</p>
