--- a/Lesson 13/join.html
+++ b/Lesson 13/join.html
@@ -84,10 +84,10 @@
                       <label>
                         <textarea name="user_message" placeholder="Business Description"></textarea></label><br><br> 
                             <label>Membership Level and Annual Fees</label><br><br>
-                            <input type="radio" name="select" value="Non-profit" class="dos" checked> <label>Non-profit ($100)</label><br><br>
-                            <input type="radio" name="select" value="no" class="dos" checked> <label>Bronze ($200)</label><br><br>
-                            <input type="radio" class="dos" name="select" value="maybe" checked> <label>Silver ($400)</label><br><br>
-                            <input type="radio" class="dos" name="select" value="maybe" checked> <label>Gold ($1000)</label>
+                            <input type="radio" name="select" value="Non-profit" class="dos" checked> <label>Non-profit ($100) (include directory listings)</label><br><br>
+                            <input type="radio" name="select" value="no" class="dos" checked> <label>Bronze ($200) (Include directory listings and Business training)</label><br><br>
+                            <input type="radio" class="dos" name="select" value="maybe" checked> <label>Silver ($400) (Include all the above and also social media posts)</label><br><br>
+                            <input type="radio" class="dos" name="select" value="maybe" checked> <label>Gold ($1000) (Include all the above and luncheon tickets, sponsorships with levels of advertising)</label>
                        
                   </fieldset>
                   
