--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -101,6 +101,8 @@
           helps entrepreneurs to resolve conflicts, training, support and strengthening of 
           companies and thus strengthen the economic activity of the state.
         </p>
+
+        <h2>Below are the three main companies operating in the town.</h2>
         <div id="empresa">
           <div class="emp">
             <h2>Sisalara</h2>
