--- a/Lesson 13/contact.html
+++ b/Lesson 13/contact.html
@@ -109,7 +109,7 @@
             <h2>Contact Information</h2>
             <p>Phone Number: (0251)251.9490</p>
             <Address>Av. Vargas, con Esquina Carrera 24, Centro,Barquisimeto, Venezuela</Address>
-            <p>Webpage:camaracomerciolara.org.ve</p>
+            <p>Webpage:<a href="camaracomerciolara.org.ve">camaracomerciolara.org.ve</a></p>
             <a href="https://www.instagram.com/camcomerciolara/?hl=en" target="_blank"><img src="images/Instagram.png" width="35" alt="icon instagram"></a>
             <a href="https://twitter.com/camcomerciolara" target="_blank"><img src="images/twitter1.png" width="35" alt="icon twitter"></a>
             <a href="https://www.facebook.com/eduardo.lind.96" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
