--- a/Lesson 13/Barquisimeto.html
+++ b/Lesson 13/Barquisimeto.html
@@ -200,7 +200,7 @@
   
   <footer>
     <div id="pie">
-      &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco |
+      &#169;<span id="fullYear"></span>| Chammber Commerce Site | Wilker Pacheco |
       <span id="design"></span>
       <script src="js/site.js"></script>
     </div>
